--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,10 @@
     <string name="categories">Categories</string>
     <string name="search">Search</string>
     <string name="close">Close</string>
+    <string name="profile_image">Profile image</string>
+    <string name="edit_profile">edit profile</string>
+    <string name="edit">Edit</string>
+    <string name="settings">Settings</string>
+    <string name="your_stats">Your Stats</string>
+    <string name="account">Account</string>
 </resources>
