--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,9 @@
     <string name="settings">Settings</string>
     <string name="your_stats">Your Stats</string>
     <string name="account">Account</string>
+    <string name="no_results_found">No results found</string>
+    <string name="nothing_here">Nothing here</string>
+    <string name="nothing_read">You haven\'t read any articles yet</string>
+    <string name="nothing_saved">You haven\'t saved any articles yet</string>
+    <string name="news">News</string>
 </resources>
